# ErickOS

./: .gitignore  CMakeLists.txt  README.md
data/bankSimulatorApp/: clients.txt
data/musicApp/: playlist.txt
data/notesApp/: notes.txt
data/toDo/: taskTodo.txt
include/bankSimulatorApp/: bankSimulatorApp.h
include/musicApp/: musicApp.h
include/notesApp/: notesApp.h
include/toDo/: toDo.h
include/utils/: utils.h
src/: main.cpp
src/bankSimulatorApp/: bankSimulatorApp.cpp
src/musicApp/: musicApp.cpp
src/notesApp/: notesApp.cpp
src/toDo/: toDo.cpp
src/utils/: utils.cpp
toDo/: taskTodo.txt  toDo.cpp  toDo.h
